# build-oci-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  benchmark.sh  test.sh
python-original/oci_builder/: blob.py  cmd.py  image_builder.py  layer_builder.py
src/: blob.rs  image_builder.rs  layer_builder.rs  main.rs  util.rs
