[package]
name = "build-oci"
version = "0.1.0"
edition = "2021"
description = "Freedesktop SDK OCI image builder"
license = "MIT"

[[bin]]
name = "build-oci"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sha2 = { version = "0.10", features = ["asm"] }
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
tar = "0.4"
tempfile = "3"
xattr = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
gzp = "0.11"
memmap2 = "0.9"
crossbeam-channel = "0.5"
jwalk = "0.8"
rustc-hash = "2"
smallvec = { version = "1", features = ["union", "write"] }
dashmap = "6"
zstd = { version = "0.13", features = ["zstdmt"] }
lasso = { version = "0.7", features = ["multi-threaded"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
